[tool.poetry]
name = "course-4"
version = "0.1.0"
description = ""
authors = ["Mikhail Belyaev <fiestaz1337@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
